--- a/org.imixs.emfcloud.bpmn2.server/plugin.xml
+++ b/org.imixs.emfcloud.bpmn2.server/plugin.xml
@@ -33,7 +33,7 @@
       <!-- @generated bpmn2 -->
       <package
             uri="http://www.eclipse.org/glsp/bpmn2"
-            class="bpmn2.Bpmn2Package"
+            class="org.imixs.emfcloud.bpmn2.model.bpmn2.Bpmn2Package"
             genModel="model/bpmn2.genmodel"/>
    </extension>
 
@@ -41,7 +41,7 @@
       <!-- @generated bpmn2 -->
       <package
             uri="http://www.eclipse.org/glsp/graph"
-            class="graph.GraphPackage"
+            class="org.eclipse.glsp.graph.GraphPackage"
             genModel="model/bpmn2.genmodel"/>
    </extension>
 </plugin>
