--- a/org.imixs.emfcloud.bpmn2.client/.project
+++ b/org.imixs.emfcloud.bpmn2.client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.imixs.emfcloud.bpmn2.client</name>
+	<name>bpmn2-client</name>
 	<comment></comment>
 	<projects>
 	</projects>
