--- a/bpmn2-client/bpmn2-glsp/package.json
+++ b/bpmn2-client/bpmn2-glsp/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@eclipse-glsp-examples/workflow-glsp",
+  "name": "@bpmn2-client/bpmn2-glsp",
   "version": "0.9.0",
-  "description": "GLSP diagrams for the Workflow DSL",
+  "description": "GLSP diagrams for the BPMN2 DSL",
   "license": "(EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0)",
   "keywords": [
     "glsp",
-    "workflow",
+    "bpmn2",
     "diagram",
     "example"
   ],
