--- a/bpmn2-client/package.json
+++ b/bpmn2-client/package.json
@@ -25,8 +25,8 @@
   },
   "workspaces": [
     "packages/*",
-    "./workflow-glsp",
-    "./workflow-standalone"
+    "./bpmn2-glsp",
+    "./bpmn2-standalone"
   ]
   
 }
