--- a/imixs-bpmn.glsp-client/bpmn-standalone/package.json
+++ b/imixs-bpmn.glsp-client/bpmn-standalone/package.json
@@ -1,26 +1,26 @@
 {
   "private": true,
   "name": "bpmn-standalone",
-  "version": "0.9.0",
+  "version": "0.0.1",
   "description": "Standalone browser-app for the Imixs-BPMN",
   "author": {
-    "name": "Eclipse GLSP"
+    "name": "imixs.org"
   },
-  "homepage": "https://www.eclipse.org/glsp/",
+  "homepage": "https://www.imixs.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eclipse-glsp/glsp-client.git"
+    "url": "https://github.com/imixs/imixs-bpmn.glsp.git"
   },
-  "bugs": "https://github.com/eclipse-glsp/glsp/issues",
+  "bugs": "https://github.com/imixs/imixs-bpmn.glsp/issues",
   "contributors": [
     {
-      "name": "Eclipse GLSP Project",
-      "email": "glsp-dev@eclipse.org",
-      "url": "https://projects.eclipse.org/projects/ecd.glsp"
+      "name": "Imixs Workflow Project",
+      "email": "info@imixs.org",
+      "url": "https://www.imixs.org"
     }
   ],
   "dependencies": {
-    "@imixs-bpmn/bpmn-glsp": "0.9.0",
+    "@imixs-bpmn/bpmn-glsp": "0.0.1",
     "@eclipse-glsp/client": "0.9.0"
   },
   "devDependencies": {
