--- a/imixs-bpmn.glsp-client/package.json
+++ b/imixs-bpmn.glsp-client/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
   "name": "parent",
-  "version": "0.9.0",
+  "version": "0.0.1",
   "engines": {
-    "yarn": ">=1.7.0 <2.x.x"
+    "yarn": ">=1.7.0 <2.x.x",
+    "node": ">=12.14.1"
   },
   "scripts": {
     "prepare": "lerna run prepare",
@@ -15,7 +16,8 @@
     "publish:prepare": "lerna version minor --exact --ignore-scripts --yes --no-push",
     "publish:latest": "lerna publish from-git --no-git-reset --no-verify-access --no-push",
     "publish:next": "SHA=$(git rev-parse --short HEAD) && lerna publish preminor --exact --canary --preid next.${SHA} --dist-tag next --no-git-reset --no-git-tag-version --no-push --ignore-scripts --yes --no-verify-access",
-    "upgrade:next": "yarn upgrade -p \"sprotty\" --next ",
+    "upgrade:next": "yarn upgrade -p \"sprotty|sprotty-theia|@eclipse-glsp.*\" --next ",
+    
     "download:exampleServer": "ts-node examples/workflow-glsp/scripts/download.ts"
   },
   "devDependencies": {
