--- a/imixs-bpmn.glsp-theia/examples/workflow-theia/package.json
+++ b/imixs-bpmn.glsp-theia/examples/workflow-theia/package.json
@@ -1,25 +1,25 @@
 {
   "name": "@bpmn2-theia/workflow-theia",
-  "version": "0.9.0",
-  "description": "Theia extension for the workflow GLSP example",
-  "license": "(EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0)",
+  "version": "0.0.1",
+  "description": "Theia extension for Imixs BPMN.glsp",
+  "license": "(GPL-3.0)",
   "keywords": [
     "theia-extension"
   ],
   "author": {
-    "name": "Eclipse GLSP"
+    "name": "imixs.org"
   },
-  "homepage": "https://www.eclipse.org/glsp/",
+  "homepage": "https://www.imixs.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eclipse-glsp/glsp-theia-integration.git"
+    "url": "https://github.com/imixs/imixs-bpmn.glsp.git"
   },
-  "bugs": "https://github.com/eclipse-glsp/glsp/issues",
+  "bugs": "https://github.com/imixs/imixs-bpmn.glsp/issues",
   "contributors": [
     {
-      "name": "Eclipse GLSP Project",
-      "email": "glsp-dev@eclipse.org",
-      "url": "https://projects.eclipse.org/projects/ecd.glsp"
+      "name": "Imixs Workflow Project",
+      "email": "info@imixs.org",
+      "url": "https://www.imixs.org"
     }
   ],
   "files": [
@@ -28,7 +28,7 @@
     "server"
   ],
   "dependencies": {
-    "@eclipse-glsp-examples/workflow-glsp": "next",
+    "@imixs-bpmn/bpmn-glsp": "0.0.1", 
     "@eclipse-glsp/theia-integration": "0.9.0"
   },
   "devDependencies": {
