--- a/imixs-bpmn.glsp-client/bpmn-theia/tsconfig.json
+++ b/imixs-bpmn.glsp-client/bpmn-theia/tsconfig.json
@@ -3,10 +3,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "lib",
-    "baseUrl": ".",
-    "reactNamespace": "JSX",
-    "skipLibCheck": true,
-    "types": []
+    "baseUrl": "."
   },
   "include": ["src"]
 }
