--- a/imixs-bpmn.glsp-client/package.json
+++ b/imixs-bpmn.glsp-client/package.json
@@ -10,17 +10,17 @@
   "author": {
     "name": "Eclipse GLSP"
   },
-  "homepage": "https://www.eclipse.org/glsp/",
+  "homepage": "https://www/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eclipse-glsp/glsp-examples.git"
+    "url": "https://github."
   },
-  "bugs": "https://github.com/eclipse-glsp/glsp/issues",
+  "bugs": "https://github.s",
   "contributors": [
     {
-      "name": "Eclipse GLSP Project",
-      "email": "glsp-dev@eclipse.org",
-      "url": "https://projects.eclipse.org/projects/ecd.glsp"
+      "name": "Imixs Project",
+      "email": "info@imixs.org",
+      "url": "https://"
     }
   ],
   "scripts": {
