--- a/imixs-bpmn.glsp-client/.vscode/launch.json
+++ b/imixs-bpmn.glsp-client/.vscode/launch.json
@@ -7,13 +7,13 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Workflow Theia Backend (Embedded GLSP Server)",
-      "program": "${workspaceRoot}/workflow-browser-app/src-gen/backend/main.js",
+      "name": "Launch BPMN Theia Backend (Embedded GLSP Server)",
+      "program": "${workspaceRoot}/bpmn-browser-app/src-gen/backend/main.js",
       "args": [
         "--port=3000",
         "--no-cluster",
         "--WF_GLSP=5014",
-        "--app-project-path=${workspaceRoot}/workflow-browser-app",
+        "--app-project-path=${workspaceRoot}/bpmn-browser-app",
         "--root-dir=${workspaceRoot}/workspace"
       ],
       "env": {
@@ -23,10 +23,10 @@
       "outFiles": [
         "${workspaceRoot}/node_modules/@theia/*/lib/**/*.js",
         "${workspaceRoot}/node_modules/@eclipse-glsp/*/lib/**/*.js",
-        "${workspaceRoot}/workflow-browser-app/lib/**/*.js",
-        "${workspaceRoot}/workflow-theia/lib/**/*.js",
-        "${workspaceRoot}/workflow-glsp/lib/**/*.js",
-        "${workspaceRoot}/workflow-browser-app/src-gen/**/*.js"
+        "${workspaceRoot}/bpmn-browser-app/lib/**/*.js",
+        "${workspaceRoot}/bpmn-theia/lib/**/*.js",
+        "${workspaceRoot}/bpmn-glsp/lib/**/*.js",
+        "${workspaceRoot}/bpmn-browser-app/src-gen/**/*.js"
       ],
       "smartStep": true,
       "internalConsoleOptions": "openOnSessionStart",
@@ -35,15 +35,15 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Workflow Theia Backend (External GLSP Server)",
-      "program": "${workspaceRoot}/workflow-browser-app/src-gen/backend/main.js",
+      "name": "Launch BPMN Theia Backend (External GLSP Server)",
+      "program": "${workspaceRoot}/bpmn-browser-app/src-gen/backend/main.js",
       "args": [
         "--loglevel=debug",
         "--port=3000",
         "--no-cluster",
         "--WF_GLSP=5014",
         "--DEBUG",
-        "--app-project-path=${workspaceRoot}/workflow-browser-app",
+        "--app-project-path=${workspaceRoot}/bpmn-browser-app",
         "--root-dir=${workspaceRoot}/workspace"
       ],
       "env": {
@@ -53,22 +53,22 @@
       "outFiles": [
         "${workspaceRoot}/node_modules/@theia/*/lib/**/*.js",
         "${workspaceRoot}/node_modules/@eclipse-glsp/*/lib/**/*.js",
-        "${workspaceRoot}/workflow-browser-app/lib/**/*.js",
-        "${workspaceRoot}/workflow-theia/lib/**/*.js",
-        "${workspaceRoot}/workflow-glsp/lib/**/*.js",
-        "${workspaceRoot}/workflow-browser-app/src-gen/**/*.js"
+        "${workspaceRoot}/bpmn-browser-app/lib/**/*.js",
+        "${workspaceRoot}/bpmn-theia/lib/**/*.js",
+        "${workspaceRoot}/bpmn-glsp/lib/**/*.js",
+        "${workspaceRoot}/bpmn-browser-app/src-gen/**/*.js"
       ],
       "smartStep": true,
       "internalConsoleOptions": "openOnSessionStart",
       "outputCapture": "std"
     },
     {
-      "name": "Launch Workflow Theia Frontend",
+      "name": "Launch BPMN Theia Frontend",
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:3000/",
       "sourceMaps": true,
-      "webRoot": "${workspaceRoot}/workflow-browser-app"
+      "webRoot": "${workspaceRoot}/bpmn-browser-app"
     }
   ]
 }
