--- a/imixs-bpmn.glsp-client/bpmn-theia/package.json
+++ b/imixs-bpmn.glsp-client/bpmn-theia/package.json
@@ -6,7 +6,7 @@
     "theia-extension"
   ],
   "description": "....",
-  "license": "(EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0)",
+  "license": "(GPL-3.0)",
   "author": {
     "name": "Eclipse GLSP"
   },
