--- a/glsp-server/pom.xml
+++ b/glsp-server/pom.xml
@@ -1,86 +1,157 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.imixs.bpmn</groupId>
-		<artifactId>org.imixs.bpmn.glsp</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
-	<artifactId>org.imixs.bpmn.glsp.server</artifactId>
-	<name>Imixs BPMN GLSP Server</name>
+	<groupId>org.eclipse.glsp.example</groupId>
+	<version>0.9.0</version>
+	<artifactId>org.eclipse.glsp.example.minimal</artifactId>
+	<description>Server component for the Minimal GLSP example</description>
+	<url>https://github.com/eclipse/glsp-examples</url>
 
+	<licenses>
+		<license>
+			<name>Eclipse Public License - v 2.0</name>
+			<url>http://www.eclipse.org/legal/epl-v20.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Eclipse GLSP Project</name>
+			<email>glsp-dev@eclipse.org</email>
+			<organization>Eclipse GLSP</organization>
+			<organizationUrl>https://projects.eclipse.org/projects/ecd.glsp</organizationUrl>
+		</developer>
+	</developers>
+
+	<scm>
+		<url>https://github.com/eclipse-glsp/glsp-examples</url>
+		<connection>scm:git@github.com:eclipse-glsp/glsp-examples.git</connection>
+		<developerConnection>scm:git@github.com:eclipse-glsp/glsp-examples.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>sonatype</id>
+			<name>Sonatype</name>
+			<url>https://oss.sonatype.org/content/groups/public</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<properties>
-		<package-type>eclipse-plugin</package-type>
-		<server-launcher>org.imixs.bpmn.glsp.server.launch.BPMN2ServerLauncher</server-launcher>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.source>11</java.source>
+		<java.target>11</java.target>
+		<checkstyle>8.44</checkstyle>
+		<checkstyle.plugin>3.1.2</checkstyle.plugin>
+
 	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>5.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.eclipse.glsp</groupId>
 			<artifactId>org.eclipse.glsp.server</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.glsp</groupId>
-			<artifactId>org.eclipse.glsp.server.websocket</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.glsp</groupId>
-			<artifactId>org.eclipse.glsp.layout</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.elk</groupId>
-			<artifactId>org.eclipse.elk.alg.layered</artifactId>
-			<version>0.7.1</version>
-			<!-- Can be removed once https://github.com/eclipse-glsp/glsp/issues/265 
-				is resolved -->
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.guava</groupId>
-					<artifactId>guava</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>30.1-jre</version>
+			<version>0.9.0</version>
 		</dependency>
 	</dependencies>
 
-	<profiles>
-		<profile>
-			<id>m2</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<package-type>jar</package-type>
-			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-deploy-plugin</artifactId>
-						<version>2.8</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
 						<configuration>
-							<skip>false</skip>
+							<sources>
+								<source>src/main/java-gen</source>
+							</sources>
 						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<source>${java.source}</source>
+					<target>${java.target}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
+			<!-- to disable use -Dcheckstyle.skip -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${checkstyle.plugin}</version>
+				<configuration>
+					<configLocation>emfcloud-checkstyle-8.44.xml</configLocation>
+					<consoleOutput>true</consoleOutput>
+					<excludes>**/src-gen/**/*.java</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<?m2e execute onConfiguration?>
+						<phase>validate</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.eclipse.emfcloud</groupId>
+						<artifactId>org.eclipse.emfcloud.checkstyle</artifactId>
+						<version>0.1.0-SNAPSHOT</version>
+					</dependency>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>${checkstyle}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+	</build>
+
+
+	<profiles>
 		<profile>
 			<id>fatjar</id>
 			<activation>
-				<activeByDefault>false</activeByDefault>
+				<activeByDefault>true</activeByDefault>
 			</activation>
 			<build>
 				<plugins>
@@ -90,27 +161,26 @@
 						<version>3.2.4</version>
 						<configuration>
 							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>${server-launcher}</mainClass>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>org.eclipse.glsp.example.minimal.MinimalServerLauncher</mainClass>
 								</transformer>
 							</transformers>
-							<artifactSet>
-								<excludes>
-									<exclude>javax.websocket:javax.websocket-client-api</exclude>
-								</excludes>
-							</artifactSet>
 							<filters>
 								<filter>
 									<artifact>*:*</artifact>
 									<excludes>
-										<exclude>META-INF/MANIFEST.MF</exclude>
+										<exclude>META-INF/INDEX.LIST</exclude>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+										<exclude>META-INF/LICENSE</exclude>
+										<exclude>META-INF/NOTICE</exclude>
 										<exclude>META-INF/DEPENDENCIES</exclude>
-										<exclude>META-INF/ECLIPSE_*</exclude>
-										<exclude>META-INF/LICENSE*</exclude>
-										<exclude>META-INF/services/javax.servlet.ServletContainerInitializer*</exclude>
-										<exclude>META-INF/NOTICE*</exclude>
+										<exclude>META-INF/MANIFEST.MF</exclude>
 										<exclude>.options</exclude>
 										<exclude>.api_description</exclude>
+										<exclude>plugin.properties</exclude>
 										<exclude>*.profile</exclude>
 										<exclude>*.html</exclude>
 										<exclude>about.*</exclude>
@@ -119,8 +189,6 @@
 										<exclude>modeling32.png</exclude>
 										<exclude>systembundle.properties</exclude>
 										<exclude>profile.list</exclude>
-										<exclude>module-info.class</exclude>
-										<exclude>plugin.properties</exclude>
 										<exclude>**/*._trace</exclude>
 										<exclude>**/*.g</exclude>
 										<exclude>**/*.tokens</exclude>
@@ -147,6 +215,4 @@
 			</build>
 		</profile>
 	</profiles>
-
-
 </project>
