--- a/glsp-client/package.json
+++ b/glsp-client/package.json
@@ -42,5 +42,24 @@
     "minimal-glsp",
     "minimal-theia",
     "minimal-browser-app"
-  ]
+  ],
+
+  "resolutions": {
+    "**/@theia/core": "1.20.0",
+    "**/@theia/editor": "1.20.0",
+    "**/@theia/filesystem": "1.20.0",
+    "**/@theia/markers": "1.20.0",
+    "**/@theia/messages": "1.20.0",
+    "**/@theia/monaco": "1.20.0",
+    "**/@theia/navigator": "1.20.0",
+    "**/@theia/outline-view": "1.20.0",
+    "**/@theia/preferences": "1.20.0",
+    "**/@theia/process": "1.20.0",
+    "**/@theia/terminal": "1.20.0",
+    "**/@theia/variable-resolver": "1.20.0",
+    "**/@theia/userstorage": "1.20.0",
+    "**/@theia/workspace": "1.20.0",
+    "**/@theia/cli": "1.20.0",
+    "**/inversify": "5.1.1"
+  }
 }
