--- a/imixs-bpmn.glsp-server/.project
+++ b/imixs-bpmn.glsp-server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.glsp.example.minimal</name>
+	<name>imixs-bpmn.glsp-server</name>
 	<comment></comment>
 	<projects>
 	</projects>
