--- a/imixs-bpmn.glsp-server/.vscode/launch.json
+++ b/imixs-bpmn.glsp-server/.vscode/launch.json
@@ -8,8 +8,8 @@
       "type": "java",
       "name": "Launch Minimal GLSP Server",
       "request": "launch",
-      "mainClass": "org.eclipse.glsp.example.minimal.MinimalServerLauncher",
-      "projectName": "org.eclipse.glsp.example.minimal",
+      "mainClass": "org.imixs.bpmn.glsp.MinimalServerLauncher",
+      "projectName": "org.imixs.bpmn.glsp",
       "args": ["--port", "5007"],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
