--- a/imixs-bpmn.glsp-server/.vscode/tasks.json
+++ b/imixs-bpmn.glsp-server/.vscode/tasks.json
@@ -21,7 +21,7 @@
       "label": "Start Minimal GLSP Server",
       "type": "shell",
       "group": "test",
-      "command": "java -jar target/org.eclipse.glsp.example.minimal-0.9.0-glsp.jar",
+      "command": "java -jar target/org.imixs.bpmn.glsp.server-0.0.1-SNAPSHOT-glsp.jar",
       "presentation": {
         "reveal": "always",
         "panel": "new"
