--- a/imixs-bpmn.glsp-client/bpmn-glsp/package.json
+++ b/imixs-bpmn.glsp-client/bpmn-glsp/package.json
@@ -1,28 +1,27 @@
 {
   "private": "true",
-  "name": "@eclipse-glsp-examples/minimal-glsp",
+  "name": "@imixs-bpmn/bpmn-glsp",
   "version": "0.9.0",
-  "description": "GLSP sprotty diagrams for the Minimal DSL",
-  "license": "(EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0)",
+  "description": "GLSP sprotty diagrams for the BPMN DSL",
+  "license": "(GPL-3.0)",
   "keywords": [
     "glsp",
-    "minimal",
+    "bpmn",
     "diagram"
   ],
   "author": {
-    "name": "Eclipse GLSP"
+    "name": "Imixs Workflow"
   },
-  "homepage": "https://www.eclipse.org/glsp/",
+  "homepage": "https://www.imixs.org/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eclipse-glsp/glsp-examples.git"
+    "url": "https://github.com/imixs/imixs-bpmn.glsp.git"
   },
-  "bugs": "https://github.com/eclipse-glsp/glsp/issues",
+  "bugs": "https://github.com/imixs/imixs-bpmn.glsp/issues",
   "contributors": [
     {
-      "name": "Eclipse GLSP Project",
-      "email": "glsp-dev@eclipse.org",
-      "url": "https://projects.eclipse.org/projects/ecd.glsp"
+      "name": "Ralph Soika",
+      "email": "ralph.soika@imixs.com"
     }
   ],
   "files": [
