--- a/imixs-bpmn.glsp-client/package.json
+++ b/imixs-bpmn.glsp-client/package.json
@@ -8,19 +8,18 @@
   },
   "license": "(EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0)",
   "author": {
-    "name": "Eclipse GLSP"
+    "name": "Imixs Workflow"
   },
-  "homepage": "https://www.eclipse.org/glsp/",
+  "homepage": "https://www.imixs.org/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eclipse-glsp/glsp-examples.git"
+    "url": "https://github.com/imixs/imixs-bpmn.glsp.git"
   },
-  "bugs": "https://github.com/eclipse-glsp/glsp/issues",
+  "bugs": "https://github.com/imixs/imixs-bpmn.glsp/issues",
   "contributors": [
     {
-      "name": "Eclipse GLSP Project",
-      "email": "glsp-dev@eclipse.org",
-      "url": "https://projects.eclipse.org/projects/ecd.glsp"
+      "name": "Ralph Soika",
+      "email": "ralph.soika@imixs.com"
     }
   ],
   "scripts": {
@@ -39,7 +38,7 @@
     "typescript": "^3.9.2"
   },
   "workspaces": [
-    "minimal-glsp",
+    "bpmn-glsp",
     "minimal-theia",
     "minimal-browser-app"
   ],
