--- a/imixs-bpmn.glsp-client/minimal-browser-app/package.json
+++ b/imixs-bpmn.glsp-client/minimal-browser-app/package.json
@@ -14,7 +14,7 @@
     "@theia/process": "1.20.0",
     "@theia/terminal": "1.20.0",
     "@theia/workspace": "1.20.0",
-    "@eclipse-glsp-examples/minimal-theia": "0.9.0"
+    "@imixs-bpmn/bpmn-theia": "0.9.0"
   },
   "devDependencies": {
     "@theia/cli": "1.20.0"
