--- a/imixs-bpmn.glsp-client/.vscode/launch.json
+++ b/imixs-bpmn.glsp-client/.vscode/launch.json
@@ -8,12 +8,12 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Minimal Theia Backend (Embedded GLSP Server)",
-      "program": "${workspaceRoot}/minimal-browser-app/src-gen/backend/main.js",
+      "program": "${workspaceRoot}/bpmn-browser-app/src-gen/backend/main.js",
       "args": [
         "--port=3000",
         "--no-cluster",
         "--MINIMAL_GLSP=5007",
-        "--app-project-path=${workspaceRoot}/minimal-browser-app",
+        "--app-project-path=${workspaceRoot}/bpmn-browser-app",
         "--root-dir=${workspaceRoot}/workspace"
       ],
       "env": {
@@ -23,10 +23,10 @@
       "outFiles": [
         "${workspaceRoot}/node_modules/@theia/*/lib/**/*.js",
         "${workspaceRoot}/node_modules/@eclipse-glsp/*/lib/**/*.js",
-        "${workspaceRoot}/minimal-browser-app/lib/**/*.js",
+        "${workspaceRoot}/bpmn-browser-app/lib/**/*.js",
         "${workspaceRoot}/bpmn-theia/lib/**/*.js",
         "${workspaceRoot}/bpmn-glsp/lib/**/*.js",
-        "${workspaceRoot}/minimal-browser-app/src-gen/**/*.js"
+        "${workspaceRoot}/bpmn-browser-app/src-gen/**/*.js"
       ],
       "smartStep": true,
       "internalConsoleOptions": "openOnSessionStart",
@@ -36,13 +36,13 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Minimal Theia Backend (External GLSP Server)",
-      "program": "${workspaceRoot}/minimal-browser-app/src-gen/backend/main.js",
+      "program": "${workspaceRoot}/bpmn-browser-app/src-gen/backend/main.js",
       "args": [
         "--port=3000",
         "--no-cluster",
         "--MINIMAL_GLSP=5007",
         "--debug",
-        "--app-project-path=${workspaceRoot}/minimal-browser-app",
+        "--app-project-path=${workspaceRoot}/bpmn-browser-app",
         "--root-dir=${workspaceRoot}/workspace"
       ],
       "env": {
@@ -52,10 +52,10 @@
       "outFiles": [
         "${workspaceRoot}/node_modules/@theia/*/lib/**/*.js",
         "${workspaceRoot}/node_modules/@eclipse-glsp/*/lib/**/*.js",
-        "${workspaceRoot}/minimal-browser-app/lib/**/*.js",
+        "${workspaceRoot}/bpmn-browser-app/lib/**/*.js",
         "${workspaceRoot}/bpmn-theia/lib/**/*.js",
         "${workspaceRoot}/bpmn-glsp/lib/**/*.js",
-        "${workspaceRoot}/minimal-browser-app/src-gen/**/*.js"
+        "${workspaceRoot}/bpmn-browser-app/src-gen/**/*.js"
       ],
       "smartStep": true,
       "internalConsoleOptions": "openOnSessionStart",
@@ -67,7 +67,7 @@
       "request": "launch",
       "url": "http://localhost:3000/",
       "sourceMaps": true,
-      "webRoot": "${workspaceRoot}/minimal-browser-app"
+      "webRoot": "${workspaceRoot}/bpmn-browser-app"
     }
   ]
 }
