--- a/imixs-bpmn.glsp-client/bpmn-glsp/tsconfig.json
+++ b/imixs-bpmn.glsp-client/bpmn-glsp/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "lib",
     "baseUrl": ".",
     "reactNamespace": "JSX",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": []
   },
   "include": ["src"]
 }
