--- a/imixs-bpmn.glsp-server/pom.xml
+++ b/imixs-bpmn.glsp-server/pom.xml
@@ -117,7 +117,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.imixs.bpmn.glsp.MinimalServerLauncher</mainClass>
+									<mainClass>org.imixs.bpmn.glsp.BPMNServerLauncher</mainClass>
 								</transformer>
 							</transformers>
 							<filters>
