--- a/imixs-bpmn.glsp-server/.vscode/tasks.json
+++ b/imixs-bpmn.glsp-server/.vscode/tasks.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Build BPMN GLSP Server",
+      "label": "Build Minimal GLSP Server",
       "type": "shell",
       "group": {
         "kind": "build",
@@ -18,7 +18,7 @@
       "problemMatcher": []
     },
     {
-      "label": "Start BPMN GLSP Server",
+      "label": "Start Minimal GLSP Server",
       "type": "shell",
       "group": "test",
       "command": "java -jar target/org.imixs.bpmn.glsp.server-0.0.2-SNAPSHOT-glsp.jar",
