--- a/open-bpmn.glsp-client/tsconfig.json
+++ b/open-bpmn.glsp-client/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "baseUrl": "."
   },
-  "include": ["bpmn-glsp/src", "bpmn-theia/src", "bpmn-browser-app"]
+  "include": ["open-bpmn-glsp/src", "open-bpmn-theia/src", "open-bpmn-app"]
 }
