--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -2,10 +2,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.imixs.bpmn</groupId>
-		<artifactId>org.imixs.open-bpmn</artifactId>
+		<artifactId>open-bpmn</artifactId>
 		<version>0.0.6-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.imixs.open-bpmn.server</artifactId>
+	<artifactId>open-bpmn.server</artifactId>
 	<name>Imixs Open BPMN GLSP Server</name>
 
 
