--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -35,12 +35,13 @@
   "devDependencies": {
     "@eclipse-glsp/config": "0.9.0",
     "lerna": "^4.0.0",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.3"
   },
   "workspaces": [
     "open-bpmn-glsp",
     "open-bpmn-theia",
-    "open-bpmn-app"
+    "open-bpmn-app",
+    "open-bpmn-welcome-page"
   ],
 
   "resolutions": {
