--- a/open-bpmn.glsp-client/open-bpmn-glsp/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/package.json
@@ -26,12 +26,10 @@
   ],
   "dependencies": {
     "@eclipse-glsp/client": "0.9.0",
+    "@jsonforms/core": "^3.0.0-beta.1",
+    "@jsonforms/react": "^3.0.0-beta.1",
+    "@jsonforms/vanilla-renderers": "^3.0.0-beta.1",
     "balloon-css": "^0.5.0"
-  },
-  "devDependencies": {
-    "@eclipse-glsp/config": "0.9.0",
-    "rimraf": "^2.6.1",
-    "typescript": "^3.9.2"
   },
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
