--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -32,10 +32,14 @@
     "start": "yarn rebuild:browser && yarn --cwd open-bpmn-app start",
     "start:external": "yarn rebuild:browser && yarn --cwd open-bpmn-app start:external"
   },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
   "devDependencies": {
     "@eclipse-glsp/config": "0.9.0",
     "lerna": "^4.0.0",
-    "typescript": "^3.9.3"
+    "typescript": "~4.5.5"
   },
   "workspaces": [
     "open-bpmn-glsp",
