--- a/open-bpmn.glsp-client/open-bpmn-glsp/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/package.json
@@ -26,11 +26,15 @@
   ],
   "dependencies": {
     "@eclipse-glsp/client": "0.9.0",
-    "@jsonforms/core": "^3.0.0-beta.1",
-    "@jsonforms/react": "^3.0.0-beta.1",
-    "@jsonforms/vanilla-renderers": "^3.0.0-beta.1",
+    "@jsonforms/core": "3.0.0-beta.0",
+    "@jsonforms/react": "3.0.0-beta.0",
+    "@jsonforms/vanilla-renderers": "3.0.0-beta.0",
     "balloon-css": "^0.5.0"
   },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },  
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
     "clean": "rimraf lib",
