--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@eclipse-glsp/config": "0.9.0",
     "lerna": "^4.0.0",
+    "rimraf": "^2.6.1",
     "typescript": "~4.5.5"
   },
   "workspaces": [
