integration of open-bpmn-properties module
Issue #18

--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -45,6 +45,7 @@
   "workspaces": [
     "open-bpmn-glsp",
     "dummy-sub1",
+    "open-bpmn-properties",
     "open-bpmn-theia",
     "open-bpmn-app"
   ],
