--- a/open-bpmn.glsp-client/tsconfig.json
+++ b/open-bpmn.glsp-client/tsconfig.json
@@ -6,6 +6,7 @@
   "include": [
 	"open-bpmn-glsp/src", 
 	"dummy-sub1/src",
+	"open-bpmn-properties/src",
 	"open-bpmn-theia/src", 
 	"open-bpmn-app"
    ]
