--- a/open-bpmn.glsp-client/open-bpmn-model/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-model/package.json
@@ -1,13 +1,9 @@
 {
   "private": "true",
-  "name": "@open-bpmn/dummy-sub1",
+  "name": "@open-bpmn/open-bpmn-model",
   "version": "0.0.8",
   "dependencies": {
     "@eclipse-glsp/client": "0.9.0"
-  },
-  "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
   },  
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
@@ -19,9 +15,8 @@
   "files": [
     "lib",
     "src",
-    "build",
-    "css"
+    "build"
   ],
-  "main": "lib/index",
-  "types": "lib/index"
+  "main": "lib/model",
+  "types": "lib/model"  
 }
