--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -44,7 +44,7 @@
   },
   "workspaces": [
     "open-bpmn-glsp",
-    "dummy-sub1",
+    "open-bpmn-model",
     "open-bpmn-properties",
     "open-bpmn-theia",
     "open-bpmn-app"
