implementation of new BPMN AnchorComputer
Issue #27

--- a/open-bpmn.glsp-client/open-bpmn-model/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-model/package.json
@@ -17,6 +17,6 @@
     "src",
     "build"
   ],
-  "main": "lib/model",
-  "types": "lib/model"  
+  "main": "lib/index",
+  "types": "lib/index"  
 }
