upgrade versions and dependencies
Issue #28

--- a/open-bpmn.glsp-client/open-bpmn-glsp/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/package.json
@@ -1,7 +1,7 @@
 {
   "private": "true",
   "name": "@open-bpmn/open-bpmn-glsp",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "GLSP sprotty diagrams for the BPMN DSL",
   "license": "(GPL-3.0)",
   "keywords": [
@@ -25,9 +25,9 @@
     }
   ],
   "dependencies": {
-    "@eclipse-glsp/client": "0.9.0",
-    "@open-bpmn/open-bpmn-properties": "0.0.8",
-    "@open-bpmn/open-bpmn-model": "0.0.8",
+    "@eclipse-glsp/client": "0.10.0-next.385713d.170",
+    "@open-bpmn/open-bpmn-properties": "0.0.9",
+    "@open-bpmn/open-bpmn-model": "0.0.9",
     "@jsonforms/core": "3.0.0-beta.0",
     "@jsonforms/react": "3.0.0-beta.0",
     "@jsonforms/vanilla-renderers": "3.0.0-beta.0",
